--- a/recipes/crispy-fried-chicken.html
+++ b/recipes/crispy-fried-chicken.html
@@ -7,5 +7,57 @@
 
     <body>
         <h1>Crispy Fried Chicken</h1>
+        <img src="../images/chicken.webp" width="500px" alt="Crispy Fried Chicken Dish">
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 (4 pound) chicken, cut into pieces</li>
+            <li>1 cup buttermilk</li>
+            <li>2 cups all-purpose flour for coating</li>
+            <li>1 teaspoon paprika</li>
+            <li>salt and pepper to taste</li>
+            <li>2 quarts vegetable oil for frying</li>
+        </ul>
+
+        <h3>Directions</h3>
+        <ol>
+            <li>Step 1
+                <p>Take your cut up cihcken and skin them if you prefer.</p>
+            </li>
+
+            <li>Step 2
+                <p>Put the floor in a large plastic bad(let the amount of chicken you are cooking dictate the amount of flour you use). Season the floour with paprika, salt and peper to taste (paprika helps to brown the chicken).</p>
+
+                <img src="../images/flour.webp" width="300px" alt="flour in a plastic bad">
+            </li>
+
+            <li>Step 3
+                <p>Dip chicken pieces in buttermilk then, a few at a time, put them in the bag with the flour, seal the bag and shake to coat well.</p>
+
+                <img src="../images/dipped-chicken.webp" width="300px" alt="dipped chicken in buttermilk">
+            </li>
+
+            <li>Step 4
+                <p>Place the coated chicken on a cookie sheet or tray, and cover with a clean dish towel or waxed paper. LET SIT THE FLOUR IS OF A PASTE-LIKE CONSISTENCY. THIS IS CRUCIAL</p>
+
+                <img src="../images/coated-chicken.webp" width="300px" alt="Coated chicken">
+            </li>
+
+            <li>Step 5
+                <p>Fill a large skillet(cast iron is best) about 1/3 to 1/2 full with vegetable oil. Heat until VERY hot.</p>
+            </li>
+
+            <li>Step 6
+                <p>Put in as many chicken pieces as the skillet can hold. Brown the chicken in HOT oil on both sides.</p>
+            </li>
+
+            <li>Step 7
+                <p>When browned, reduce heat and cover skillet; let cook for 30 minutes (the chicken will be cooked through but not crispy). Remove cover, rasie heat again, and continue to fry until crispy.</p>
+            </li>
+
+            <li>Step 8
+                <p>Drain the fried chicken on paper towels. Depending on how much chicken you have, you may have to fry in a few shifts. Keep the finished chicken in a slightly warm oven while preparing the rest.</p>
+            </li>
+        </ol>
     </body>
 </html>
