--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/cowboy-coleslaw.html">Cowboy Coleslaw</a>
-        <a href="./recipes/crispy-fried-chicken.html">Crispy Fried Chicken</a>
-        <a href="./recipes/pikliz.html">Pikliz</a>
+        <ul>
+            <li><a href="./recipes/cowboy-coleslaw.html">Cowboy Coleslaw</a></li>
+            <li><a href="./recipes/crispy-fried-chicken.html">Crispy Fried Chicken</a></li>
+            <li> <a href="./recipes/pikliz.html">Pikliz</a></li>
+        </ul>
+         
     </body>
 </html>
