--- a/index.html
+++ b/index.html
@@ -3,15 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
+       
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="./recipes/cowboy-coleslaw.html">Cowboy Coleslaw</a></li>
-            <li><a href="./recipes/crispy-fried-chicken.html">Crispy Fried Chicken</a></li>
-            <li> <a href="./recipes/pikliz.html">Pikliz</a></li>
-        </ul>
-         
+        <main class="container">
+            <h1>Odin Recipes</h1>
+            <nav class="nav">
+                <ul>
+                    <li><a href="./recipes/cowboy-coleslaw.html">Cowboy Coleslaw</a></li>
+                    <li><a href="./recipes/crispy-fried-chicken.html">Crispy Fried Chicken</a></li>
+                    <li> <a href="./recipes/pikliz.html">Pikliz</a></li>
+                </ul>  
+            </nav>
+        </main>
     </body>
 </html>
